Fix hover spacing and display for items which are unavailable
git-svn-id: http://plugins.svn.wordpress.org/amberlink/trunk@1501596 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/amber/css/amber.css
+++ b/amber/css/amber.css
@@ -138,7 +138,7 @@
  color: white;             
  border-radius: 4px;
  background-color: #5b88b3;
- min-width: 350px;
+ min-width: 355px;
  z-index: 999999;
 }
 
@@ -223,6 +223,12 @@
   font-size: 9px;
   line-height: 12px;
   z-index: 9999999;
+}
+
+.amber-hover.amber-down a.amber-memento-link.found {
+  margin-left: 70px;
+  margin-top: -19px;
+  height: 19px;
 }
 
 .amber-hover a.amber-focus {
